fix: garantir contraste dos links da navbar no dark mode

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,10 @@
+body.dark-mode .navbar .nav-link, body.dark-mode .navbar-nav .nav-link {
+  color: #aaddff !important;
+}
+body.dark-mode .navbar .nav-link:hover, body.dark-mode .navbar-nav .nav-link:hover {
+  color: #00bfff !important;
+  text-decoration: underline;
+}
 
 /* LIGHT MODE (default) */
 body:not(.dark-mode) {
